--- a/A03_SOMA_CODINGTEST/B_11_15/C11_D-20_260215.ipynb
+++ b/A03_SOMA_CODINGTEST/B_11_15/C11_D-20_260215.ipynb
@@ -2,26 +2,64 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "62fc32a4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Donghyuk\n",
+      "Sangkeun\n",
+      "Sunyoung\n",
+      "nsj\n",
+      "Wonseob\n",
+      "Sanghyun\n",
+      "Sei\n",
+      "Kangsoo\n",
+      "Haebin\n",
+      "Junkyu\n",
+      "Soong\n",
+      "Taewhan\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
+    "# 1. 알고(구현): 백준 10825 (국영수) - https://www.acmicpc.net/problem/10825\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''12\n",
+    "Junkyu 50 60 100\n",
+    "Sangkeun 80 60 50\n",
+    "Sunyoung 80 70 100\n",
+    "Soong 50 60 90\n",
+    "Haebin 50 60 100\n",
+    "Kangsoo 60 80 100\n",
+    "Donghyuk 80 60 100\n",
+    "Sei 70 70 70\n",
+    "Wonseob 70 70 90\n",
+    "Sanghyun 70 70 80\n",
+    "nsj 80 80 80\n",
+    "Taewhan 50 60 90''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
+    "    N = int(input())\n",
+    "    scores = []\n",
     "\n",
-    "    pass\n",
+    "    for _ in range(N):\n",
+    "        name, kor, eng, mat = input().split()\n",
+    "        scores.append((name, int(kor), int(eng), int(mat)))\n",
+    "\n",
+    "    scores.sort(key=lambda x: (-x[1], x[2], -x[3], x[0]))\n",
+    "    print(\"\\n\".join(name for name, *_ in scores))\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -29,71 +67,148 @@
    "execution_count": null,
    "id": "5f85729d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
+    "# 2. 알고(수학): 백준 11051 (이항 계수 2) - https://www.acmicpc.net/problem/11051\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''5 2''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
+    "    N, K = map(int, input().split())\n",
+    "    MODE = 10_007  # comb(N, K)\n",
     "\n",
-    "    pass\n",
+    "    # (n, k) = (n-1, n-k) + (n-1, k)   n(row), k(col)\n",
+    "    dp = [[0] * (N + 1) for _ in range(N+1)]\n",
+    "    for i in range(0, N + 1):\n",
+    "        dp[i][0] = 1\n",
+    "        dp[i][i] = 1\n",
+    "\n",
+    "    for n in range(2, N + 1):\n",
+    "        for k in range(0, n):\n",
+    "            dp[n][k] = (dp[n-1][n-k] + dp[n-1][k]) % MODE\n",
+    "\n",
+    "    print(dp[N][K])\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "be7d35ea",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "icpc 2\n",
+      "spc 2\n",
+      "txt 3\n",
+      "world 1\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
+    "# 3. 알고(Map): 백준 20291 (파일 정리) - https://www.acmicpc.net/problem/20291\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''8\n",
+    "sbrus.txt\n",
+    "spc.spc\n",
+    "acm.icpc\n",
+    "korea.icpc\n",
+    "sample.txt\n",
+    "hello.world\n",
+    "sogang.spc\n",
+    "example.txt''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
     "\n",
-    "    pass\n",
+    "    N = int(input())\n",
+    "\n",
+    "    count = dict()\n",
+    "    for _ in range(N):\n",
+    "        _, tag = input().rstrip().split(\".\")\n",
+    "        count[tag] = count.get(tag, 0) + 1\n",
+    "\n",
+    "    result = map(lambda x: f\"{x[0]} {x[1]}\", sorted(count.items()))\n",
+    "    print(\"\\n\".join(result))\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "id": "9ab6f72b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
+    "# 4. 알고(그리디): 백준 1141 (접두사) - https://www.acmicpc.net/problem/1141\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''6\n",
+    "hello\n",
+    "hi\n",
+    "h\n",
+    "run\n",
+    "rerun\n",
+    "running''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
     "\n",
-    "    pass\n",
+    "    N = int(input())\n",
     "\n",
+    "    words = list(set(input().rstrip() for _ in range(N)))\n",
+    "    words.sort(key=len)\n",
     "\n",
-    "solve()\n"
+    "    count = 0\n",
+    "    length = len(words)\n",
+    "\n",
+    "    for i in range(length):\n",
+    "        is_prefix = False\n",
+    "        for j in range(i + 1, length):\n",
+    "            if words[j].startswith(words[i]):\n",
+    "                is_prefix = True\n",
+    "                break\n",
+    "        if not is_prefix:\n",
+    "            count += 1\n",
+    "\n",
+    "    print(count)\n",
+    "\n",
+    "solve()"
    ]
   },
   {
@@ -102,7 +217,15 @@
    "metadata": {},
    "source": [
     "```sql\n",
-    "\n",
+    "-- 5. SQL(Lv.1): 상위 n개 레코드 \n",
+    "-- https://school.programmers.co.kr/learn/courses/30/lessons/59405\n",
+    "SELECT \n",
+    "    NAME \n",
+    "FROM \n",
+    "    ANIMAL_INS\n",
+    "ORDER BY\n",
+    "    DATETIME\n",
+    "LIMIT 1;\n",
     "```"
    ]
   },
@@ -113,7 +236,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# 1. 알고(시뮬): 백준 15685 (드래곤 커브) - https://www.acmicpc.net/problem/15685\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
@@ -137,7 +260,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# 2. 알고(DP): 백준 2225 (합분해) - https://www.acmicpc.net/problem/2225\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
@@ -161,7 +284,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# 3. 알고(그래프): 백준 1717 (집합의 표현) - https://www.acmicpc.net/problem/1717\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
@@ -185,7 +308,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# 4. 알고(백트래킹): 백준 15659 (연산자 끼워넣기 (3)) - https://www.acmicpc.net/problem/15659\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
@@ -208,14 +331,28 @@
    "metadata": {},
    "source": [
     "```sql\n",
-    "\n",
+    "-- 5. SQL(Lv.4): 서울에 위치한 식당 목록 출력하기 - https://school.programmers.co.kr/learn/courses/30/lessons/131118\n",
     "```"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": ".venv (3.13.9)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
