--- a/A03_SOMA_CODINGTEST/B_11_15/C11_D-20_260215.ipynb
+++ b/A03_SOMA_CODINGTEST/B_11_15/C11_D-20_260215.ipynb
@@ -231,26 +231,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "d4d305b0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
    "source": [
     "# 1. 알고(시뮬): 백준 15685 (드래곤 커브) - https://www.acmicpc.net/problem/15685\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''3\n",
+    "3 3 0 1\n",
+    "4 2 1 3\n",
+    "4 2 2 1''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
     "\n",
-    "    pass\n",
+    "    N = int(input())\n",
+    "\n",
+    "    dirs = [(+1, 0), (0, -1), (-1, 0), (0, +1)]\n",
+    "    dots = set()\n",
+    "\n",
+    "    # 한 점을 기준으로 시계방향 으로 점을 회전\n",
+    "    for _ in range(N):\n",
+    "        x, y, d, gen = map(int, input().split())\n",
+    "        dx, dy = dirs[d]\n",
+    "\n",
+    "        line = [(x, y), (x + dx, y + dy)]\n",
+    "\n",
+    "        while gen > 0:\n",
+    "            ex, ey = line[-1]\n",
+    "            center_z = complex(ex, ey)\n",
+    "            new_line = []\n",
+    "\n",
+    "            # 끝점과 가까운 점들부터 회전\n",
+    "            for i in range(len(line)-2, -1, -1):\n",
+    "                rx, ry = line[i]\n",
+    "                target_z = complex(rx, ry)\n",
+    "\n",
+    "                z = (target_z - center_z) * 1j + center_z\n",
+    "                new_line.append((round(z.real), round(z.imag)))\n",
+    "\n",
+    "            line.extend(new_line)\n",
+    "            gen -= 1\n",
+    "\n",
+    "        dots.update(line)\n",
+    "\n",
+    "    count = 0\n",
+    "    for x, y in dots:\n",
+    "        # 아래, 오른쪽, 대각선 점 존재 체크 (set이라 인덱스 걱정 없음)\n",
+    "        if (x, y + 1) in dots \\\n",
+    "                and (x + 1, y) in dots \\\n",
+    "                and (x + 1, y + 1) in dots:\n",
+    "            count += 1\n",
+    "\n",
+    "    print(count)\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -258,23 +307,48 @@
    "execution_count": null,
    "id": "44b2c219",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "21\n",
+      "21\n"
+     ]
+    }
+   ],
    "source": [
     "# 2. 알고(DP): 백준 2225 (합분해) - https://www.acmicpc.net/problem/2225\n",
     "import sys\n",
+    "# from math import comb\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''20 2''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
     "\n",
-    "    pass\n",
+    "    N, K = map(int, input().split())\n",
+    "    MODE = 1_000_000_000\n",
     "\n",
+    "    # dp[k][n] = sigma (t=0, n) dp[k-1][t]  정수 k 개의 합으로 N을 만드는 경우의 수\n",
+    "    # dp[k][n] = dp[k][n-1] + dp[k-1][n] => 간단 버전.\n",
+    "    dp = [[0] * (N + 1) for _ in range(K + 1)]\n",
     "\n",
-    "solve()\n"
+    "    for n in range(N + 1):\n",
+    "        dp[1][n] = 1\n",
+    "\n",
+    "    for k in range(2, K + 1):\n",
+    "        for n in range(1, N + 1):\n",
+    "            dp[k][0] = 1   # 0 만 사용해서 0 만들 수 있음\n",
+    "            dp[k][n] = (dp[k][n-1] + dp[k-1][n]) % MODE\n",
+    "\n",
+    "    print(dp[K][N])\n",
+    "\n",
+    "    # print(comb(K + (N - 1), N))   1 N개 사이 칸막이를 고르는 경우의 수\n",
+    "solve()"
    ]
   },
   {
@@ -282,23 +356,73 @@
    "execution_count": null,
    "id": "7310d5de",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NO\n",
+      "NO\n",
+      "YES\n"
+     ]
+    }
+   ],
    "source": [
     "# 3. 알고(그래프): 백준 1717 (집합의 표현) - https://www.acmicpc.net/problem/1717\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''7 8\n",
+    "0 1 3\n",
+    "1 1 7\n",
+    "0 7 6\n",
+    "1 7 1\n",
+    "0 3 7\n",
+    "0 4 2\n",
+    "0 1 1\n",
+    "1 1 1''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
+    "    n, m = map(int, input().split())\n",
     "\n",
-    "    pass\n",
+    "    parent = list(range(n + 1))         # 루트는 자기 자신을 참조\n",
+    "    size = [1] * (n + 1)                # 루트 노드에 연결된 그래프 크기\n",
+    "\n",
+    "    def find_root(x):\n",
+    "        while parent[x] != x:               # 내 노드가 루트가 아니면\n",
+    "            parent[x] = parent[parent[x]]   # 내 부모값을 할아버지 노드로 변경\n",
+    "            x = parent[x]                   # 다시 탐색\n",
+    "        return x    # 최상위 루트 반환\n",
+    "\n",
+    "    def union(a, b):\n",
+    "        root_a = find_root(a)\n",
+    "        root_b = find_root(b)\n",
+    "\n",
+    "        if root_a != root_b:\n",
+    "\n",
+    "            # 작은 집합을 큰 집합에 붙임 (b 가 작게 만듬)\n",
+    "            if size[root_a] < size[root_b]:\n",
+    "                root_a, root_b = root_b, root_a\n",
+    "\n",
+    "            parent[root_b] = root_a         # a(큰쪽)이 root\n",
+    "            size[root_a] += size[root_b]    # 작은 쪽 싸이즈는 더이상 안쓰임\n",
+    "\n",
+    "    # 실행\n",
+    "    result = []\n",
+    "    for _ in range(m):\n",
+    "        cmd, a, b = map(int, input().split())\n",
+    "        if cmd == 0:\n",
+    "            union(a, b)\n",
+    "        else:\n",
+    "            result.append(\"YES\" if find_root(a) == find_root(b) else \"NO\")\n",
+    "\n",
+    "    print(\"\\n\".join(result))\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -306,23 +430,100 @@
    "execution_count": null,
    "id": "f78dd7c6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "35\n",
+      "-27\n"
+     ]
+    }
+   ],
    "source": [
     "# 4. 알고(백트래킹): 백준 15659 (연산자 끼워넣기 (3)) - https://www.acmicpc.net/problem/15659\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''6\n",
+    "1 2 3 4 5 6\n",
+    "2 1 1 1''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
+    "    N = int(input())\n",
     "\n",
-    "    pass\n",
+    "    nums = list(map(int, input().split()))\n",
+    "    plus, minus, mul, div = map(int, input().split())\n",
+    "\n",
+    "    eq = [nums[0]]\n",
+    "\n",
+    "    min_val = float('inf')\n",
+    "    max_val = -float('inf')\n",
+    "\n",
+    "    def calculate(eq):\n",
+    "        stack = [eq[0]]\n",
+    "\n",
+    "        # 연산자와 숫자가 번갈아 나오므로 2칸씩 건너뜁\n",
+    "        for i in range(1, len(eq), 2):\n",
+    "            op = eq[i]\n",
+    "            nxt_num = eq[i + 1]\n",
+    "\n",
+    "            if op == '+':\n",
+    "                stack.append(nxt_num)\n",
+    "            elif op == '-':\n",
+    "                stack.append(-nxt_num)  # 음수로 넣기\n",
+    "            elif op == '*':\n",
+    "                # 곱셈은 스택 맨 위 숫자와 즉시 계산\n",
+    "                stack[-1] = stack[-1] * nxt_num\n",
+    "            elif op == '//':\n",
+    "                # 나눗셈은 파이썬 // 대신 int(a / b) 사용 (C++14 기준)\n",
+    "                stack[-1] = int(stack[-1] / nxt_num)\n",
+    "\n",
+    "        # 스택에 남은 숫자들을 모두 더함\n",
+    "        return sum(stack)\n",
+    "\n",
+    "    def dfs(depth, plus, minus, mul, div):\n",
+    "        nonlocal min_val, max_val\n",
+    "\n",
+    "        if depth == N:\n",
+    "            cal_val = calculate(eq)   # eval(가능)\n",
+    "            min_val = min(min_val, cal_val)\n",
+    "            max_val = max(max_val, cal_val)\n",
+    "            return\n",
+    "\n",
+    "        next_num = nums[depth]\n",
+    "\n",
+    "        # 남은 연산자 개수가 0보다 클 때만 해당 분기로 진입\n",
+    "        if plus:\n",
+    "            eq.extend([\"+\", next_num])\n",
+    "            dfs(depth + 1, plus - 1, minus, mul, div)\n",
+    "            del eq[-2:]  # 백트래킹: 추가했던 연산자와 숫자를 다시 빼줌\n",
+    "\n",
+    "        if minus:\n",
+    "            eq.extend([\"-\", next_num])\n",
+    "            dfs(depth + 1, plus, minus - 1, mul, div)\n",
+    "            del eq[-2:]\n",
+    "\n",
+    "        if mul:\n",
+    "            eq.extend([\"*\", next_num])\n",
+    "            dfs(depth + 1, plus, minus, mul - 1, div)\n",
+    "            del eq[-2:]\n",
+    "\n",
+    "        if div:\n",
+    "            eq.extend([\"//\", next_num])\n",
+    "            dfs(depth + 1, plus, minus, mul, div - 1)\n",
+    "            del eq[-2:]\n",
+    "\n",
+    "    dfs(1, plus, minus, mul, div)\n",
+    "\n",
+    "    print(max_val)\n",
+    "    print(min_val)\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -332,13 +533,40 @@
    "source": [
     "```sql\n",
     "-- 5. SQL(Lv.4): 서울에 위치한 식당 목록 출력하기 - https://school.programmers.co.kr/learn/courses/30/lessons/131118\n",
+    "WITH SEOUL AS (\n",
+    "    SELECT \n",
+    "        REST_ID,\n",
+    "        REST_NAME,\n",
+    "        FOOD_TYPE,\n",
+    "        FAVORITES,\n",
+    "        ADDRESS\n",
+    "    FROM \n",
+    "        REST_INFO\n",
+    "    WHERE\n",
+    "        ADDRESS LIKE '서울%'\n",
+    ")\n",
+    "SELECT\n",
+    "    S.REST_ID,\n",
+    "    S.REST_NAME,\n",
+    "    S.FOOD_TYPE,\n",
+    "    S.FAVORITES,\n",
+    "    S.ADDRESS,\n",
+    "    ROUND(AVG(R.REVIEW_SCORE), 2) AS SCORE\n",
+    "FROM SEOUL S\n",
+    "JOIN\n",
+    "    REST_REVIEW R USING(REST_ID)\n",
+    "GROUP BY\n",
+    "    S.REST_ID\n",
+    "ORDER BY\n",
+    "    SCORE DESC,\n",
+    "    FAVORITES DESC;\n",
     "```"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv (3.13.9)",
+   "display_name": "251117_MathForPython",
    "language": "python",
    "name": "python3"
   },
