--- a/A03_SOMA_CODINGTEST/B_11_15/C12_D-19_260216.ipynb
+++ b/A03_SOMA_CODINGTEST/B_11_15/C12_D-19_260216.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# 1. 알고(구현): 백준 10157 (자리배정) - https://www.acmicpc.net/problem/10157\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
@@ -31,7 +31,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# 2. 알고(수학): 백준 2004 (조합 0의 개수) - https://www.acmicpc.net/problem/2004\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
@@ -55,7 +55,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# 3. 알고(Map): 백준 16165 (걸그룹 마스터 준석이) - https://www.acmicpc.net/problem/16165\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
@@ -79,7 +79,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# 4. 알고(그리디): 백준 11501 (주식) - https://www.acmicpc.net/problem/11501\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
@@ -102,7 +102,8 @@
    "metadata": {},
    "source": [
     "```sql\n",
-    "\n",
+    "-- 5. SQL(Lv.2): 이름에 el이 들어가는 동물 찾기 \n",
+    "-- https://school.programmers.co.kr/learn/courses/30/lessons/59047\n",
     "```"
    ]
   },
@@ -113,7 +114,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# 1. 알고(시뮬): 백준 16235 (나무 재테크) - https://www.acmicpc.net/problem/16235\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
@@ -137,7 +138,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# 2. 알고(DP): 백준 2294 (동전 2) - https://www.acmicpc.net/problem/2294\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
@@ -161,7 +162,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# 3. 알고(그래프): 백준 2638 (치즈) - https://www.acmicpc.net/problem/2638\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
@@ -185,7 +186,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# 4. 알고(백트래킹): 백준 1038 (감소하는 수) - https://www.acmicpc.net/problem/1038\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
@@ -208,7 +209,8 @@
    "metadata": {},
    "source": [
     "```sql\n",
-    "\n",
+    "-- 5. SQL(Lv.4): 우유와 요거트가 담긴 장바구니 \n",
+    "-- https://school.programmers.co.kr/learn/courses/30/lessons/62284\n",
     "```"
    ]
   }
