--- a/A03_SOMA_CODINGTEST/B_11_15/C12_D-19_260216.ipynb
+++ b/A03_SOMA_CODINGTEST/B_11_15/C12_D-19_260216.ipynb
@@ -5,23 +5,61 @@
    "execution_count": null,
    "id": "62fc32a4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6 6\n"
+     ]
+    }
+   ],
    "source": [
     "# 1. 알고(구현): 백준 10157 (자리배정) - https://www.acmicpc.net/problem/10157\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''7 6\n",
+    "11''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
+    "    C, R = map(int, input().split())\n",
+    "    K = int(input())\n",
     "\n",
-    "    pass\n",
+    "    total_seat = C*R\n",
+    "    if total_seat < K:\n",
+    "        print(0)\n",
+    "        return\n",
+    "\n",
+    "    visited = [[False] * R for _ in range(C)]   # board를 세움\n",
+    "    directions = [(0, +1), (+1, 0), (0, -1), (-1, 0)]\n",
+    "\n",
+    "    x, y = 0, 0\n",
+    "    visited[0][0] = True\n",
+    "\n",
+    "    set_count = 1\n",
+    "    dir_idx = 0\n",
+    "\n",
+    "    while set_count < K:\n",
+    "\n",
+    "        dx, dy = directions[dir_idx]\n",
+    "        nx, ny = x + dx, y + dy\n",
+    "\n",
+    "        if 0 <= nx < C and 0 <= ny < R and not visited[nx][ny]:\n",
+    "            x, y = nx, ny\n",
+    "            visited[x][y] = True\n",
+    "            set_count += 1\n",
+    "\n",
+    "        else:\n",
+    "            dir_idx = (dir_idx + 1) % 4\n",
+    "\n",
+    "    print(x+1, y+1)\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -29,18 +67,33 @@
    "execution_count": null,
    "id": "5f85729d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "25 12\n"
+     ]
+    }
+   ],
    "source": [
     "# 2. 알고(수학): 백준 2004 (조합 0의 개수) - https://www.acmicpc.net/problem/2004\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''25 12''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
-    "\n",
+    "# (n, m) = n! // (m!*(n-m)!)\n",
     "def solve():\n",
+    "\n",
+    "    def count_factor(num, p):\n",
+    "        \n",
+    "\n",
+    "\n",
+    "    n, m = map(int, input().split())\n",
+    "\n",
     "\n",
     "    pass\n",
     "\n",
@@ -216,8 +269,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "251117_MathForPython",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
