--- a/A03_SOMA_CODINGTEST/B_11_15/C12_D-19_260216.ipynb
+++ b/A03_SOMA_CODINGTEST/B_11_15/C12_D-19_260216.ipynb
@@ -72,7 +72,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "25 12\n"
+      "2\n"
      ]
     }
    ],
@@ -85,20 +85,34 @@
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
-    "# (n, m) = n! // (m!*(n-m)!)\n",
+    "\n",
     "def solve():\n",
-    "\n",
-    "    def count_factor(num, p):\n",
-    "        \n",
-    "\n",
-    "\n",
+    "    # (n, m) = n! // (m!*(n-m)!)\n",
     "    n, m = map(int, input().split())\n",
     "\n",
+    "    def cnt_factor(num, p):\n",
+    "        count = 0\n",
+    "        while num > 0:\n",
+    "            num //= p\n",
+    "            count += num\n",
+    "        return count\n",
     "\n",
-    "    pass\n",
+    "    nomer_cnt_5 = cnt_factor(n, 5)\n",
+    "    nomer_cnt_2 = cnt_factor(n, 2)\n",
+    "\n",
+    "    left_denom_5 = cnt_factor(m, 5)\n",
+    "    left_denom_2 = cnt_factor(m, 2)\n",
+    "\n",
+    "    right_denom_5 = cnt_factor(n - m, 5)\n",
+    "    right_denom_2 = cnt_factor(n - m, 2)\n",
+    "\n",
+    "    final_factor_5 = nomer_cnt_5 - left_denom_5 - right_denom_5\n",
+    "    final_factor_2 = nomer_cnt_2 - left_denom_2 - right_denom_2\n",
+    "\n",
+    "    print(min(final_factor_5, final_factor_2))\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -106,23 +120,104 @@
    "execution_count": null,
    "id": "be7d35ea",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "twice\n",
+      "redvelvet\n",
+      "chaeyoung\n",
+      "dahyeon\n",
+      "jeongyeon\n",
+      "jihyo\n",
+      "mina\n",
+      "momo\n",
+      "nayeon\n",
+      "sana\n",
+      "tzuyu\n",
+      "blackpink\n"
+     ]
+    }
+   ],
    "source": [
     "# 3. 알고(Map): 백준 16165 (걸그룹 마스터 준석이) - https://www.acmicpc.net/problem/16165\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''3 4\n",
+    "twice\n",
+    "9\n",
+    "jihyo\n",
+    "dahyeon\n",
+    "mina\n",
+    "momo\n",
+    "chaeyoung\n",
+    "jeongyeon\n",
+    "tzuyu\n",
+    "sana\n",
+    "nayeon\n",
+    "blackpink\n",
+    "4\n",
+    "jisu\n",
+    "lisa\n",
+    "rose\n",
+    "jenny\n",
+    "redvelvet\n",
+    "5\n",
+    "wendy\n",
+    "irene\n",
+    "seulgi\n",
+    "yeri\n",
+    "joy\n",
+    "sana\n",
+    "1\n",
+    "wendy\n",
+    "1\n",
+    "twice\n",
+    "0\n",
+    "rose\n",
+    "1''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
     "\n",
-    "    pass\n",
+    "    N, M = map(int, input().split())\n",
+    "    team_member = dict()\n",
+    "    member_team = dict()\n",
+    "\n",
+    "    for _ in range(N):\n",
+    "        team = input().rstrip()\n",
+    "        member_cnt = int(input())\n",
+    "\n",
+    "        members = []\n",
+    "        for _ in range(member_cnt):\n",
+    "            member_name = input().rstrip()\n",
+    "            members.append(member_name)\n",
+    "            member_team[member_name] = team\n",
+    "\n",
+    "        members.sort()\n",
+    "        team_member[team] = members\n",
+    "\n",
+    "    answers = list()\n",
+    "    for _ in range(M):\n",
+    "        quize = input().rstrip()\n",
+    "        cmd = int(input())\n",
+    "\n",
+    "        if cmd == 0:\n",
+    "            member = team_member[quize]\n",
+    "            member.sort()\n",
+    "            answers.extend(member)\n",
+    "        else:\n",
+    "            team_name = member_team[quize]\n",
+    "            answers.append(team_name)\n",
+    "\n",
+    "    print(\"\\n\".join(answers))\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -130,23 +225,53 @@
    "execution_count": null,
    "id": "9ab6f72b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "10\n",
+      "5\n"
+     ]
+    }
+   ],
    "source": [
     "# 4. 알고(그리디): 백준 11501 (주식) - https://www.acmicpc.net/problem/11501\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''3\n",
+    "3\n",
+    "10 7 6\n",
+    "3\n",
+    "3 5 9\n",
+    "5\n",
+    "1 1 3 1 2''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
     "\n",
-    "    pass\n",
+    "    input()\n",
+    "    prices = list(map(int, input().split()))\n",
+    "\n",
+    "    max_price = 0\n",
+    "    profit = 0\n",
+    "\n",
+    "    for price in reversed(prices):\n",
+    "        if price > max_price:\n",
+    "            max_price = price\n",
+    "        else:\n",
+    "            profit += max_price - price\n",
+    "\n",
+    "    print(profit)\n",
     "\n",
     "\n",
-    "solve()\n"
+    "T = int(input())\n",
+    "for _ in range(T):\n",
+    "    solve()"
    ]
   },
   {
@@ -157,6 +282,16 @@
     "```sql\n",
     "-- 5. SQL(Lv.2): 이름에 el이 들어가는 동물 찾기 \n",
     "-- https://school.programmers.co.kr/learn/courses/30/lessons/59047\n",
+    "SELECT \n",
+    "    ANIMAL_ID,\n",
+    "    NAME\n",
+    "FROM \n",
+    "    ANIMAL_INS\n",
+    "WHERE \n",
+    "    NAME LIKE '%el%'\n",
+    "    AND ANIMAL_TYPE = 'Dog'\n",
+    "ORDER BY\n",
+    "    NAME;\n",
     "```"
    ]
   },
@@ -165,23 +300,109 @@
    "execution_count": null,
    "id": "d4d305b0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "85\n"
+     ]
+    }
+   ],
    "source": [
     "# 1. 알고(시뮬): 백준 16235 (나무 재테크) - https://www.acmicpc.net/problem/16235\n",
     "import sys\n",
+    "from itertools import product\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''5 2 6\n",
+    "2 3 2 3 2\n",
+    "2 3 2 3 2\n",
+    "2 3 2 3 2\n",
+    "2 3 2 3 2\n",
+    "2 3 2 3 2\n",
+    "2 1 3\n",
+    "3 2 3''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
+    "    N, M, K = map(int, input().split())\n",
     "\n",
-    "    pass\n",
+    "    # 8방향\n",
+    "    directions = [\n",
+    "        (r, c)\n",
+    "        for r, c, in product([-1, 0, +1], repeat=2)\n",
+    "        if (r, c) != (0, 0)\n",
+    "    ]\n",
+    "\n",
+    "    # rows, cols 조합 미리 저장.\n",
+    "    rows_cols = tuple(product(range(0, N), repeat=2))\n",
+    "\n",
+    "    A = [list(map(int, input().split())) for _ in range(N)]\n",
+    "\n",
+    "    # 데큐 넣을때 * N 사용 금지.\n",
+    "    trees_arr = [[dict() for _ in range(N)] for _ in range(N)]\n",
+    "    trees = [list(map(int, input().split())) for _ in range(M)]\n",
+    "    for x, y, age in trees:\n",
+    "        trees_arr[x-1][y-1][age] = 1   # 입력으로 주어지는 나무위치는 모두 다름\n",
+    "\n",
+    "    nutrition = [[5] * N for _ in range(N)]  # 영양분\n",
+    "\n",
+    "    while K > 0:   # 1년 사이클.\n",
+    "\n",
+    "        # 봄 + 여름: 나이만큼 양분 먹고 -> 나이가 1 증가, 나이만큼 양분을 먹을 수 없으면 즉사, # 어린 나무부터 양분,\n",
+    "        for (r, c) in rows_cols:\n",
+    "            trees_dict = trees_arr[r][c]\n",
+    "            cur_nutri = nutrition[r][c]\n",
+    "\n",
+    "            grown_trees = dict()\n",
+    "            dead_nutri = 0          # 여름에 추가될 영양성분\n",
+    "\n",
+    "            for tree_age, count in sorted(trees_dict.items()):  # 어린 나무 부터\n",
+    "\n",
+    "                survive_count = min(count, cur_nutri // tree_age)\n",
+    "                dead_count = count - survive_count\n",
+    "\n",
+    "                if survive_count > 0:\n",
+    "                    cur_nutri -= tree_age * survive_count\n",
+    "                    grown_trees[tree_age + 1] = survive_count\n",
+    "\n",
+    "                if dead_count > 0:\n",
+    "                    dead_nutri += (tree_age // 2) * dead_count\n",
+    "\n",
+    "            trees_arr[r][c] = grown_trees              # 성장한 트리 값 추가.\n",
+    "            nutrition[r][c] = cur_nutri + dead_nutri   # 최종 영양 성분 저장.\n",
+    "\n",
+    "        # 가을 나무 번식, (나이가 5배수) => 인접칸 나이 나무 1\n",
+    "        for r, c in rows_cols:\n",
+    "            trees_dict = trees_arr[r][c]\n",
+    "            for tree_age, count in trees_dict.items():\n",
+    "                if tree_age % 5 == 0:        # 나이가 5의 배수이면\n",
+    "                    for dr, dc in directions:\n",
+    "                        nr, nc = r + dr, c + dc\n",
+    "                        if 0 <= nr < N and 0 <= nc < N:\n",
+    "                            nxt_tree_dict = trees_arr[nr][nc]\n",
+    "                            nxt_tree_dict[1] = nxt_tree_dict.get(1, 0) + count\n",
+    "\n",
+    "        # 겨울 A[R][C] 양분 추가.\n",
+    "        for r, c in rows_cols:\n",
+    "            nutrition[r][c] += A[r][c]\n",
+    "\n",
+    "        K -= 1  # 다음 해\n",
+    "\n",
+    "    # 살아있는 나무 개수.\n",
+    "    live_trees_sum = 0\n",
+    "    for r, c in rows_cols:\n",
+    "        trees_dict = trees_arr[r][c]\n",
+    "        for count in trees_dict.values():\n",
+    "            live_trees_sum += count\n",
+    "\n",
+    "    print(live_trees_sum)\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -189,71 +410,192 @@
    "execution_count": null,
    "id": "44b2c219",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
    "source": [
     "# 2. 알고(DP): 백준 2294 (동전 2) - https://www.acmicpc.net/problem/2294\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''3 15\n",
+    "1\n",
+    "5\n",
+    "12''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
     "\n",
-    "    pass\n",
+    "    n, k = map(int, input().split())\n",
+    "    coins = set()\n",
+    "\n",
+    "    for _ in range(n):\n",
+    "        coin = int(input())\n",
+    "        if coin <= k:\n",
+    "            coins.add(coin)\n",
+    "\n",
+    "    # dp[i] i 원을 만들기 위한 최소 길이\n",
+    "    dp = [0] + [float('inf')] * k  # 0원 만드는 최소길이는 0원\n",
+    "\n",
+    "    for coin in coins:\n",
+    "        for i in range(coin, k + 1):\n",
+    "            dp[i] = min(dp[i], dp[i - coin] + 1)  # 사용 안할 때 , 사용할 때\n",
+    "\n",
+    "    print(dp[k] if dp[k] != float('inf') else -1)\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
    "id": "7310d5de",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
    "source": [
     "# 3. 알고(그래프): 백준 2638 (치즈) - https://www.acmicpc.net/problem/2638\n",
     "import sys\n",
+    "from collections import deque\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''8 9\n",
+    "0 0 0 0 0 0 0 0 0\n",
+    "0 0 0 1 1 0 0 0 0\n",
+    "0 0 0 1 1 0 1 1 0\n",
+    "0 0 1 1 1 1 1 1 0\n",
+    "0 0 1 1 1 1 1 0 0\n",
+    "0 0 1 1 0 1 1 0 0\n",
+    "0 0 0 0 0 0 0 0 0\n",
+    "0 0 0 0 0 0 0 0 0''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
+    "    N, M = map(int, input().split())\n",
     "\n",
-    "    pass\n",
+    "    board = [list(map(int, input().split())) for _ in range(N)]\n",
+    "    directions = [(+1, 0), (-1, 0), (0, +1), (0, -1)]\n",
+    "\n",
+    "    time = 0\n",
+    "    while True:\n",
+    "\n",
+    "        melt_target = list()                # 녹을 대상.\n",
+    "        visited = [[0]*M for _ in range(N)]\n",
+    "\n",
+    "        dq = deque([(0, 0)])\n",
+    "        visited[0][0] = -1                  # 빈곳 -1, 녹일곳 +1\n",
+    "\n",
+    "        while dq:\n",
+    "            r, c = dq.popleft()\n",
+    "\n",
+    "            for dr, dc in directions:\n",
+    "                nr, nc = r + dr, c + dc\n",
+    "                if 0 <= nr < N and 0 <= nc < M:\n",
+    "                    nxt_val = board[nr][nc]\n",
+    "                    visit_info = visited[nr][nc]\n",
+    "\n",
+    "                    if nxt_val == 0 and visit_info == 0:\n",
+    "                        dq.append((nr, nc))\n",
+    "                        visited[nr][nc] = -1\n",
+    "\n",
+    "                    elif nxt_val == 1 and visit_info < 2:\n",
+    "                        visit_info += 1\n",
+    "                        if visit_info == 2:\n",
+    "                            melt_target.append((nr, nc))\n",
+    "                        visited[nr][nc] = visit_info\n",
+    "\n",
+    "        if melt_target:\n",
+    "            for r, c in melt_target:\n",
+    "                board[r][c] = 0\n",
+    "        else:\n",
+    "            break   # 녹을 대상 더 이상 없으면 종료.\n",
+    "\n",
+    "        time += 1\n",
+    "\n",
+    "    print(time)\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 119,
    "id": "f78dd7c6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "42\n"
+     ]
+    }
+   ],
    "source": [
     "# 4. 알고(백트래킹): 백준 1038 (감소하는 수) - https://www.acmicpc.net/problem/1038\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''18''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
+    "    N = int(input())\n",
     "\n",
-    "    pass\n",
+    "    answers = []\n",
+    "    digits = []\n",
+    "\n",
+    "    def dfs(max_val):\n",
+    "\n",
+    "        if max_val == -1:\n",
+    "            return\n",
+    "\n",
+    "        if not digits:\n",
+    "            for num in range(max_val):\n",
+    "                digits.append(num)\n",
+    "                dfs(num)\n",
+    "                digits.pop()\n",
+    "\n",
+    "        else:\n",
+    "            answers.append(int(\"\".join(map(str, digits))))  # 출력\n",
+    "\n",
+    "            last_num = digits[-1]\n",
+    "            for num in range(max_val):\n",
+    "                if num < last_num:\n",
+    "                    digits.append(num)\n",
+    "                    dfs(num)\n",
+    "                    digits.pop()\n",
+    "\n",
+    "    dfs(10)\n",
+    "    if N >= len(answers):\n",
+    "        print(-1)\n",
+    "    else:\n",
+    "        answers.sort()\n",
+    "        print(answers[N])\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -264,6 +606,18 @@
     "```sql\n",
     "-- 5. SQL(Lv.4): 우유와 요거트가 담긴 장바구니 \n",
     "-- https://school.programmers.co.kr/learn/courses/30/lessons/62284\n",
+    "SELECT \n",
+    "    CART_ID\n",
+    "FROM \n",
+    "    CART_PRODUCTS\n",
+    "WHERE \n",
+    "    NAME IN ('Milk', 'Yogurt')\n",
+    "GROUP BY \n",
+    "    CART_ID\n",
+    "HAVING \n",
+    "    COUNT(DISTINCT NAME) = 2\n",
+    "ORDER BY \n",
+    "    CART_ID;\n",
     "```"
    ]
   }
