--- a/A03_SOMA_CODINGTEST/B_11_15/C13_D-18_260217.ipynb
+++ b/A03_SOMA_CODINGTEST/B_11_15/C13_D-18_260217.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# 1. 알고(구현): 백준 1713 (후보 추천하기) - https://www.acmicpc.net/problem/1713\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
@@ -31,7 +31,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# 2. 알고(수학): 백준 9613 (GCD 합) - https://www.acmicpc.net/problem/9613\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
@@ -55,7 +55,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# 3. 알고(Map): 백준 14425 (문자열 집합) - https://www.acmicpc.net/problem/14425\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
@@ -79,7 +79,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# 4. 알고(그리디): 백준 2012 (등수 매기기) - https://www.acmicpc.net/problem/2012\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
@@ -102,7 +102,7 @@
    "metadata": {},
    "source": [
     "```sql\n",
-    "\n",
+    "-- 5. SQL(Lv.2): 가격대 별 상품 개수 구하기 - https://school.programmers.co.kr/learn/courses/30/lessons/131530\n",
     "```"
    ]
   },
@@ -113,7 +113,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# 1. 알고(시뮬): 백준 20056 (마법사 상어와 파이어볼) - https://www.acmicpc.net/problem/20056\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
@@ -137,7 +137,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# 2. 알고(DP): 백준 1106 (호텔) - https://www.acmicpc.net/problem/1106\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
@@ -161,7 +161,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# 3. 알고(그래프): 백준 10282 (해킹) - https://www.acmicpc.net/problem/10282\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
@@ -185,7 +185,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# 4. 알고(백트래킹): 백준 1182 (부분수열의 합) - https://www.acmicpc.net/problem/1182\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
@@ -208,7 +208,7 @@
    "metadata": {},
    "source": [
     "```sql\n",
-    "\n",
+    "-- 5. SQL(Lv.4): 입양 시각 구하기(2) - https://school.programmers.co.kr/learn/courses/30/lessons/59413\n",
     "```"
    ]
   }
