--- a/A03_SOMA_CODINGTEST/B_11_15/C13_D-18_260217.ipynb
+++ b/A03_SOMA_CODINGTEST/B_11_15/C13_D-18_260217.ipynb
@@ -2,26 +2,55 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "62fc32a4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 6 7\n"
+     ]
+    }
+   ],
    "source": [
     "# 1. 알고(구현): 백준 1713 (후보 추천하기) - https://www.acmicpc.net/problem/1713\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''3\n",
+    "9\n",
+    "2 1 4 3 5 6 2 7 2''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
     "\n",
-    "    pass\n",
+    "    N = int(input())\n",
+    "    M = int(input())\n",
+    "    likes = list(map(int, input().split()))\n",
+    "\n",
+    "    candidates = dict()  # (추천수, 등록순서)\n",
+    "\n",
+    "    for i, number in enumerate(likes):\n",
+    "\n",
+    "        if number in candidates:  # 사진 명단에 있으면\n",
+    "            count, order = candidates[number]\n",
+    "            candidates[number] = (count + 1, order)\n",
+    "            continue\n",
+    "\n",
+    "        if len(candidates) == N:  # 길이가 3이면 삭제\n",
+    "            del_number = min(candidates, key=lambda x: candidates[x])\n",
+    "            del candidates[del_number]\n",
+    "\n",
+    "        candidates[number] = (1, i)\n",
+    "\n",
+    "    print(*sorted(candidates))\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -214,8 +243,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": ".venv (3.13.9)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
